hard-gists/3719849/run.log
=== Docker Run Log for 3719849 ===
Started at: Mi 29. Okt 13:57:33 CET 2025

[2025-10-29 13:57:34] START: Running container for 3719849
[2025-10-29 13:57:34] SUCCESS: Container 829d192f617a635bf312cbbac0814715bed02a19048ec7a4a4754c38d7fc7484 started for 3719849
=== Container logs for 3719849 ===
  File "/snippet.py", line 23
    print current.writes(nb, 'json')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3719849 ===
[2025-10-29 13:57:36] INFO: Container 829d192f617a635bf312cbbac0814715bed02a19048ec7a4a4754c38d7fc7484 has stopped
